# market

./: .gitignore  market_uwsgi.ini  pyproject.toml  requirements.txt
accounts/: forms.py  mixins.py  urls.py  views.py
accounts/templates/: account_information.html  account_update_information.html  adresses.html  login.html  my_account.html  register.html
address/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
address/migrations/: 0001_initial.py  0002_rename_adress_address.py  0003_alter_address_user.py  0004_alter_address_user.py
address/templates/: address.html  create_address.html  update_address.html
app/: settings.py  urls.py
app/templates/: base.html
cart/: context_processors.py  mixins.py  models.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_cart_created_at_cart_updated_at.py
cart/templates/: cart_list.html
order/: forms.py  models.py  urls.py  views.py
order/migrations/: 0001_initial.py  0002_order_user.py  0003_order_shipping_city_order_shipping_number_and_more.py  0004_order_shipping_quartier_alter_order_shipping_city.py
order/templates/: checkout.html  order_detail.html  orders.html
products/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_product_photo.py  0003_alter_product_photo.py  0004_alter_department_name_alter_product_name.py
products/templates/: edit_product.html  home.html  new_product.html  product_detail.html  products_list.html
