[project]
name = "market-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.9.2",
    "django==5.2.7",
    "django-filter==25.2",
    "django-localflavor==5.0",
    "django-widget-tweaks==1.5.1",
    "mysql==0.0.3",
    "mysqlclient==2.2.7",
    "pillow==12.1.0",
    "pip==25.2",
    "python-stdnum==2.2",
    "sqlparse==0.5.3",
]
